Set up defaults

--- a/wally.toml
+++ b/wally.toml
@@ -1,6 +1,9 @@
 [package]
 name = "csunix/recursiveray"
+description = "Smart recursive ray for interacting with the physical worldspace."
+license = "MIT"
 version = "1.0.0"
+include = 
 registry = "https://github.com/UpliftGames/wally-index"
 realm = "shared"
 
